# lab14

./: CMakeLists.txt  README.md
artifacts/: .travis.yml
sources/: pack.cpp
